Applied OER logging guidelines